# AlmaTrack

./: .gitignore  README.md  alumni.html  dashboard.html  fix_colors.py  fix_html.py  fix_tailwind.py  fix_tailwind2.py  fix_theme.py  main.py  pyproject.toml  revert_theme.py  test_browser.py  test_darkmode.py  tz.txt  ТЕХНИЧЕСКОЕ ЗАДАНИЕ.docx
api/: main.py
api/routers/: events.py  stats.py  users.py
bot/: config.py  main.py  notifiers.py
bot/handlers/: __init__.py  achievements.py  employment.py  events.py  help.py  privacy.py  profile.py  start.py  stats.py
bot/keyboards/: __init__.py  main.py  onboarding.py
bot/middlewares/: auth.py
bot/states/: __init__.py  employment.py  onboarding.py
core/: emoji.py  gamification.py
data/: faculties.json
db/: base.py  crud.py  models.py  seed.py
web/: alumni.php  app.py  dashboard.php  database.php  fake_student.php  index.html  login.php  register.html  register.php  student_add.php
web/templates/: alumni.html  analytics.html  dashboard.html  events.html  login.html  moderators.html  requests.html
